--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,15 @@ jobs:
       
       - name: Current branch
         run: echo ${{ github.head_ref }}
+        
+      - uses: actions/checkout@v2
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
 
+      - name: Check output
+        run: echo ${{ steps.vars.outputs.short_ref }}
+        
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
